<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/detail_image"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY" />

        </FrameLayout>

        <TextView
            android:id="@+id/detail_title1"
            android:layout_marginHorizontal="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/detail_title1"
            android:textSize="14dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detail_release"
            android:layout_marginHorizontal="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/detail_release"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/detail_title3"
            android:layout_marginHorizontal="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/detail_title3"
            android:textSize="14dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detail_extension"
            android:layout_marginHorizontal="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/detail_extension"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/detail_title2"
            android:layout_marginHorizontal="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/detail_title2"
            android:textSize="14dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detail_text"
            android:layout_marginHorizontal="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/detail_text"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/detail_title4"
            android:layout_marginHorizontal="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/detail_title4"
            android:textSize="14dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detail_source"
            android:layout_marginHorizontal="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/detail_source"
            android:textSize="12dp" />

        <Button
            android:id="@+id/btn_detail"
            android:background="@color/colorPrimary"
            android:textColor="#fff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/btn_detail" />

    </LinearLayout>
</ScrollView>
