<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/about_me_photo"
                    android:layout_gravity="center"
                    android:src="@drawable/user_photo"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_marginBottom="8dp"
                    tools:src="@android:color/darker_gray" />

                <TextView
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:text="@string/user_name"/>

                <TextView
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textSize="15dp"
                    android:text="@string/user_email"/>

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/activity_vertical_margin">

                        <Button
                            android:drawableLeft="@drawable/ic_email_black_24dp"
                            android:layout_margin="10dp"
                            android:background="@color/colorPrimary"
                            android:layout_gravity="center"
                            android:id="@+id/btn_email"
                            android:textSize="10dp"
                            android:paddingHorizontal="10dp"
                            android:textColor="#fff"
                            android:layout_width="130dp"
                            android:layout_height="40dp"
                            android:text="@string/btnEmail" />

                        <Button
                            android:drawableLeft="@drawable/ic_phone_black_24dp"
                            android:layout_margin="10dp"
                            android:background="@color/colorPrimary"
                            android:layout_gravity="center"
                            android:id="@+id/btn_phone"
                            android:paddingHorizontal="10dp"
                            android:textSize="10dp"
                            android:textColor="#fff"
                            android:layout_width="130dp"
                            android:layout_height="40dp"
                            android:text="@string/btnPhone" />

                </LinearLayout>

        </LinearLayout>

</RelativeLayout>